apps/tkproster/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkproster-api
  namespace: tkproster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tkproster-api
  template:
    metadata:
      labels:
        app: tkproster-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tkproster-api

      containers:
        - name: tkproster-api
          image: ghcr.io/harris-consult/tkp-traffic-api:latest
          ports:
            - containerPort: 5000

          volumeMounts:
            - name: firebase-volume
              mountPath: /app/firebase-service-account.json
              subPath: firebase-service-account.json
              readOnly: true
      volumes:
        - name: firebase-volume
          secret:
            secretName: tkproster-secrets
            items:
              - key: FIREBASE_CONFIG
                path: firebase-service-account.json
