apps/tkproster/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tkproster-api
  namespace: tkproster
spec:
  selector:
    app: tkproster-api
  ports:
    - port: 80
      targetPort: 5000
