apps/tkproster/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tkproster-api-ingress
  namespace: tkproster
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx # Explicitly define your controller
  tls:
    - hosts:
        - api.tkproster.com
      secretName: tkproster-api-tls # Cert-manager will create this secret
  rules:
    - host: api.tkproster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tkproster-api # MUST match the metadata.name of your Service
                port:
                  number: 80
